<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_view"
    android:weightSum="1"
    android:background="@color/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:id="@+id/icon_about_dialog"
                        android:src="@mipmap/ic_politechnika"
                        android:contentDescription="@string/icon_description_about_dialog"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/title_main_about_dialog"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.8"
                        android:layout_marginStart="20dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/title_about_dialog"
                        android:textStyle="bold|italic"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textColor="@color/text_color" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/author_about_dialog"
                android:layout_weight="0.05"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/author_about_dialog"
                android:textStyle="bold"
                android:textSize="20sp"
                android:singleLine="false"
                android:ellipsize="end"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_contact_about_dialog"
                android:layout_weight="0.05"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contact_us_title_about_dialog"
                android:textStyle="bold"
                android:textSize="25sp"
                android:singleLine="true"
                android:ellipsize="end" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contact_about_dialog"
                android:layout_weight="0.05"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email_contact"
                android:textSize="20sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="?attr/actionModeSplitBackground"
                android:fontFamily="serif"
                android:clickable="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_version_about_dialog"
                android:layout_weight="0.05"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/version_about_title_dialog"
                android:textStyle="bold"
                android:textSize="25sp"
                android:singleLine="true"
                android:ellipsize="end" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/version_about_dialog"
                android:layout_weight="0.05"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_last_build_about_dialog"
                android:layout_weight="0.05"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/last_build_about_title_dialog"
                android:textStyle="bold"
                android:textSize="25sp"
                android:singleLine="true"
                android:ellipsize="end" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last_build_about_dialog"
                android:layout_weight="0.05"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@android:color/background_dark" />

            <Button
                android:text="@string/ok_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:id="@+id/ok_btn"
                android:layout_alignParentTop="true"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="right"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>