<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/faq_view"
    android:weightSum="1"
    android:background="@color/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:id="@+id/icon_faq_dialog"
                        android:src="@mipmap/ic_politechnika"
                        android:contentDescription="@string/icon_description_faq_dialog"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/title_main_faq_dialog"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.8"
                        android:layout_marginStart="20dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/title_faq_dialog"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:singleLine="false"
                        android:ellipsize="end"/>
                </TableRow>
            </TableLayout>
            <!-- Question 1 -->
                   <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_1"
                android:text="@string/question_about_app"
                style="@style/question_text_view_custom"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer1"
                android:text="@string/answer_about_app"
                style="@style/answer_text_view_custom"/>

            <!-- Question 2 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_2"
                android:text="@string/question_about_author"
                style="@style/question_text_view_custom" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer2"
                android:text="@string/answer_about_author"
                style="@style/answer_text_view_custom"/>

            <!-- Question 3 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_3"
                android:text="@string/question_about_full_funcional"
                style="@style/question_text_view_custom"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer3"
                android:text="@string/answer_about_full_funcional"
                style="@style/answer_text_view_custom" />

            <!-- Question 4 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_4"
                android:text="@string/question_about_panel_preference"
                style="@style/question_text_view_custom" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer4"
                android:text="@string/answer_about_panel_preference"
                style="@style/answer_text_view_custom"/>


            <!-- Question 5 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_5"
                android:text="@string/question_about_license"
                style="@style/question_text_view_custom" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer5"
                android:text="@string/answer_about_license"
                style="@style/answer_text_view_custom" />

            <!-- Question 6 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_6"
                android:text="@string/question_about_register"
               style="@style/question_text_view_custom" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer6"
                android:text="@string/answer_about_register"
                style="@style/answer_text_view_custom"/>

            <!-- Question 7 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_7"
                android:text="@string/question_about_project_source"
                style="@style/question_text_view_custom"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer7"
                style="@style/answer_text_view_custom"
                android:text="@string/answer_about_project_source"
                android:linksClickable="true"

               />


            <!-- Question 8 -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_8"
                android:text="@string/question_about_web_page"
                style="@style/question_text_view_custom"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answer8"
                android:text="@string/answer_about_web_page"
                style="@style/answer_text_view_custom"
                android:linksClickable="true"
                android:autoLink="web"/>
            <Button
                android:text="@string/ok_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:id="@+id/ok_btn"
                android:layout_alignParentTop="true"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="right"
                android:textSize="18sp"
               />










        </LinearLayout>
    </ScrollView>

</LinearLayout>